fixed width inconsistency on mobile

--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -3,14 +3,6 @@
   color: color-default
 }
 
-.jumbo {
-  font-size: 200%
-  background: darkgrey
-  color: white
-  border: 2px solid #97a93d
-  padding: 1em
-}
-
 .front-top {
   width: 75%
   margin-left: auto
@@ -22,8 +14,19 @@
     border: 2px solid sandybrown
     max-height: 4em
     position: absolute
-    right: -1.75em
+    right: -1.4em
     top: -0.75em
+  }
+}
+
+.jumbo {
+  font-size: 200%
+  background: darkgrey
+  color: white
+  border: 2px solid #97a93d
+  padding: 1em
+  .small {
+    max-width: 95%
   }
 }
 
